...
            self.interactor.fetchData()
            self.view.reloadCollectionView()
        }
    }
    
    func rightBarButtonPressed(){
        let action = UIAlertAction.init(title: NSLocalizedString("Reset", comment: "Reset database"), style:.destructive) { (_) in
            self.view.startActivity()
            self.interactor.resetDataBase()
        }
        let cancel = UIAlertAction.init(title: NSLocalizedString("Cancel", comment: "Cancel reset database action"), style: .cancel, handler:nil)
        
        wireframe.showAlert(with: "Reset Data Base", message: "Are you sure you want to reset the Data Base? All changes made will be lost.", actions: [action,cancel])
    }
    
    func didSelect(_ instance:PokemonEntity) {
        wireframe.presentDetailModule(for: instance, with: self)
    }
    
...
