...
extension DetailPresenter: DetailPresenterInterface {
    func viewDidLoad(){
        interactor.extractDetailsFrom(instance)
    }
    
    func rightBarButtonPressed(){
        let action = UIAlertAction.init(title: NSLocalizedString("Delete", comment: "Reset database"), style:.destructive) { (_) in
            self.interactor.delete(self.instance)
        }
        let cancel = UIAlertAction.init(title: NSLocalizedString("Cancel", comment: "Cancel reset database action"), style: .cancel, handler:nil)
        
        wireframe.showAlert(with: "Delete \(self.instance.resourceName?.capitalized ?? "Pokemon")", message: "Are you sure you want to delete this Pokemon from the Data Base? This operation can't be undone.", actions: [action,cancel])
    }
...
