...
        super.viewWillTransition(to: size, with: coordinator)
        guard let flowLayout = collectionView.collectionViewLayout as? UICollectionViewFlowLayout else { return }
        flowLayout.invalidateLayout()
    }
    
    func setupNavigationItem(){
        navigationItem.title = "Pokedex"
        navigationItem.setHidesBackButton(true, animated: false)
        navigationItem.titleView?.tintColor = ThemeManager.currentTheme().titleTextColor
        navigationItem.setRightBarButton(refreshBarButton, animated: true)
        navigationItem.searchController = searchController
        navigationItem.hidesSearchBarWhenScrolling = true
    }
...
